--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,6 +62,8 @@ article {
 		width: inherit;
 		height: inherit;
 		top: 260px; left: 20px;
+		width: 140px;
+		height: 40px;
 	}
 	.twitter-follow {
 		left: 145px;
